# open3d-core-android

./: CMakeLists.txt  Readme.md  build.bat  open3d-android.config.cmake  open3d-android.patch
android-studio/: CMakeLists.txt
